--- a/CV.html
+++ b/CV.html
@@ -2,66 +2,33 @@
 <html>
 		<head>
 				<title id="type">Curriculum Vitae</title>
-				<link rel="stylesheet" href="style.css"/>
+				<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+				<link rel="stylesheet" href="style/style.css"/>
 		</head>
 		<body>
-			<div class="container1">
-				<div class="box1">
-					<h1>Full Name:</h1>
-					<h2>Kriszta Petras</h2>
+		<div class="container">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<div class="container-fluid">
+				<a class="navbar-brand"  href="#">Curiculum Vitae     Kriszta Petras </a>
 				</div>
-				<div class="box2">
-					<h2>Address:</h2>
-					<h2>21 Drynam Green, Swords</h2>
-				</div>
-				<div class="box3">
-					<h2>Email:</h2>
-					<h2>risztapetras@yahoo.com</h2>
-				</div>
-			</div>
+			</nav>
+		</div>
+		<br/>
+	<div class="card">
+		<div class="card-body">
+			<h5 class="card-title">Personal Profile</h5>
+			<p class="card-text">I am a reliable, flexible and motivated individual with key strengths in sales and customer service.
+			Able uphold good order on sites whilst working within a companies procedural guidelines and also ensuring a high quality of service is consistently maintained with optimum efficiency.
+			Organised, friendly, approachable, outgoing and confident, I am a dedicated worker who enjoys working on my own initiative and also as part of a team.</p>
 			
-			<div class="container2">
-				<div class="box-1">
-					<h2>Education and Further Training</h2>
-					<p>APR 2018 Academy of Aviation, Passenger Services Induction</p>
-					<p>2016-2018 Master Degree “ Security management in contemporary society”,  Romanian Line “University of  Babes-Bolyai” ,  Faculty of history and philosophy, Romania</p>
-					<p>2013-2016 Bachelor’s Degree in Security Study, Political Science  Romanian Line University of  Babes-Bolyai ,  Faculty of history and philosophy, Romania</p>
-				</div>
-			</div>
+		</div>
+	</div>
 			
-			<div class="container3">
-				<div class="box-2">
-					<h2>Employment History</h2>
-					<p>AUG 2018 – PRESENT  Day  Provincial Security</p>
-					<p>APR 2018 – AUG 2018 Swissport International Ltd.</p>
-					<p>JAN 2017 – JAN 2018 S.C. Rikkosteel S.R.L. ,Romania</p>
-				</div>
-			</div>
-			
-			<div class="container4">
-				<div class="box-3">
-					<h2>Skills</h2>
-					<p>Leadership, interpersonal skills, teamwork, flexibility, adaptaility, customer service, patience, creativity, motivation.</p>
-				</div>
-			</div>
-			
-			<a href="#beep">Go to next section</a>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/><br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<h1 id="beep" class="know">Hobbies:</h1>
-				<p>Painting, Reading, Sociolaizing with friends, Taking long wals in the nature, Reading.</p> 
+			<img src="image/me.jpg" alt="Kriszta Petras " class="center" />
+			<a href="about/cv.html">About Page</a>
+			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 		</body>
 </html>
 					
